# elevo-desktop

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  config.elevo.json  config.json  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  pull_request.yml
scripts/: bump-version.mjs  copy-config.mjs  sync-lucide.mjs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json  oauth.json  tasks.json  webview-sdk.json  workspaces.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: webview-sdk.js
src-tauri/src/: lib.rs  menu.rs  updater.rs
